Fix control drawer select field from overflowing the layout

--- a/packages/app-web/src/views/canvas/canvas.scss
+++ b/packages/app-web/src/views/canvas/canvas.scss
@@ -63,7 +63,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    padding: rem(88) rem(40) rem(40);
+    padding: rem(32);
     color: $c-meta;
   }
 
