--- a/packages/app-web/src/views/select/select.scss
+++ b/packages/app-web/src/views/select/select.scss
@@ -6,6 +6,7 @@
   display: inline-flex;
   flex-direction: row;
   align-items: center;
+  max-width: 100%;
   height: rem(32);
   line-height: 0;
   padding: 0 0 0 rem(8);
@@ -82,6 +83,10 @@
     @extend %t-label;
     pointer-events: none;
     white-space: nowrap;
+    flex-basis: 0;
+    flex-grow: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   &__chevron {
